Inserted tables, figures

--- a/Lab1/Report1.tex
+++ b/Lab1/Report1.tex
@@ -12,13 +12,35 @@ In this lab, we will use a battery, which is a device which converts chemical en
 Even though we typically think of batteries as ideal voltage sources, we will characterize ways in which the battery differs from the ideal voltage source.
 
 \section{Procedure}
-\section{Execution}
+\begin{figure}[htpb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{SchematicA.png}
+    \caption{A schematic showing how $V_{oc}$ was measured.}
+    \label{fig:SchemA}
+\end{figure}
+\begin{figure}[htpb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{SchematicB.png}
+    \caption{A schematic showing how $V_{ab}$ was measured.}
+    \label{fig:SchemB}
+\end{figure}
+\section{Raw Data}
+\begin{table}
+    \begin{center}
+    \caption{Experimental values of $V_{oc}$ and $V_{ab}$ for all three batteries. The current and $R_{int}$ columns are calculated using Eq.~\ref{}}
     \begin{tabular}{|c c c c c|}
         \hline
-        Battery & $V_{oc}$ & $V_{ab}$ & I & $R_{int}$\\
+        Battery & $V_{oc} [V]$ & $V_{ab} [V]$ & $ I[A]$ & $R_{int} [\Omega]$\\
         \hline
-                &       &       &       &
+        A      &   1.6044    &  1.5918     &  0.015918     &  0.79155 \\
+        B   & 1.6072    & 1.6025 &  0.016025 & 0.2933 \\
+        C   & 1.6083    & 1.5865    & 0.015865  & 1.3741 \\
         \hline
+
     \end{tabular}
-\section{Results and Conclusion}
+    \end{center}
+    \end{table}
+\section{Analysis}
+
+\section{Conclusion}
 \end{document}
